[package]
name = "serex"
version = "0.1.0"
authors = ["Serentty"]
edition = "2018"


[lib]
crate-type = ["staticlib"]

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
multiboot2 = "0.10.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
uart_16550 = "0.2.0"
x86_64 = "0.12.3"

[profile.dev]
opt-level = "z"
overflow-checks = true
lto = true
incremental = true
debug = true

