[package]
name = "serex"
version = "0.1.0"
authors = ["Serentty"]
edition = "2021"


[lib]
crate-type = ["staticlib"]

[dependencies]
volatile = "0.2.7"
spin = "0.9.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
multiboot2 = "0.14.0"
pc-keyboard = "0.6.1"
bitflags = "1.2.1"
linked_list_allocator = "0.10.4"
mopa = { version = "0.2.2", features = ["no_std"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
uart_16550 = "0.2.18"
pic8259 = "0.10.2"
x86_64 = "0.14.10"

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "5.x.x" }
register = { version = "1.x.x" }

[profile.dev]
opt-level = "z"
overflow-checks = true
lto = false
incremental = true
debug = false